<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.covenantcollege.safetyandsecurityapp.Shuttle_Fragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_shuttle_button_text"
        android:id="@+id/callShuttleButton"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_shuttle_button_text"
        android:id="@+id/textShuttleButton"
        android:layout_below="@+id/shuttleDestinationSpinner"
        android:layout_alignLeft="@+id/callShuttleButton"
        android:layout_alignStart="@+id/callShuttleButton"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/shuttle_ride_name_text"
        android:ems="10"
        android:id="@+id/shuttleRiderName"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/callShuttleButton"
        android:layout_alignRight="@+id/callShuttleButton"
        android:layout_alignEnd="@+id/callShuttleButton" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shuttlePickUpLocationSpinner"
        android:entries="@array/shuttle_potential_locations"
        android:prompt="@string/shuttle_pick_up_location_prompt"
        android:layout_marginTop="40dp"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/shuttleRiderName"
        android:layout_toRightOf="@+id/shuttlePickupLocation"
        android:layout_toEndOf="@+id/shuttlePickupLocation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/shuttle_pick_up_location_text"
        android:id="@+id/shuttlePickupLocation"
        android:layout_alignTop="@+id/shuttlePickUpLocationSpinner"
        android:layout_alignLeft="@+id/shuttleRiderName"
        android:layout_alignStart="@+id/shuttleRiderName" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shuttleDestinationSpinner"
        android:entries="@array/shuttle_potential_locations"
        android:prompt="@string/shuttle_pick_up_location_prompt"
        android:layout_marginTop="40dp"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/shuttlePickUpLocationSpinner"
        android:layout_toRightOf="@+id/shuttlePickupLocation"
        android:layout_toEndOf="@+id/shuttlePickupLocation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/shuttle_destination_prompt"
        android:id="@+id/shuttleDestinationLabel"
        android:layout_alignTop="@+id/shuttleDestinationSpinner"
        android:layout_alignLeft="@+id/shuttlePickupLocation"
        android:layout_alignStart="@+id/shuttlePickupLocation" />

</RelativeLayout>
